Remove TabService in favor of routerlinkactive

--- a/frontend/src/app/pages/bodi/overview/bodi-overview.component.html
+++ b/frontend/src/app/pages/bodi/overview/bodi-overview.component.html
@@ -15,8 +15,7 @@
       class="font-bold-xl"
       *ngFor="let tab of TABS"
       [routerLink]="tab.link"
-      (click)="activeTab = tab"
-      [active]="activeTab === tab"
+      routerLinkActive="active-tab"
     >
       {{ tab.title | translate }}
     </a>
