Dont show single select checkmark

--- a/frontend/src/app/core/form-components/select/select.component.html
+++ b/frontend/src/app/core/form-components/select/select.component.html
@@ -11,6 +11,7 @@
     [attr.data-cy]="dataCy"
     placeholder="{{ placeHolderLabel | translate }}"
     [multiple]="multiple"
+    [hideSingleSelectionIndicator]="true"
   >
     <mat-option *ngFor="let option of options" [value]="valueExtractor(option)">
       <ng-container
