--- a/frontend/src/app/core/form-components/bo-select/business-organisation-select.component.html
+++ b/frontend/src/app/core/form-components/bo-select/business-organisation-select.component.html
@@ -5,6 +5,7 @@
   [controlName]="controlName"
   [formGroup]="formGroup"
   [items$]="businessOrganisations"
+  [disabled]="disabled"
 >
   <div class="d-flex flex-column">
     <mat-label [ngClass]="formModus ? 'required-indicator' : ''" class="font-bold-lg">{{
