--- a/frontend/src/app/pages/bodi/transport-companies/detail/transport-company-detail.component.html
+++ b/frontend/src/app/pages/bodi/transport-companies/detail/transport-company-detail.component.html
@@ -90,6 +90,7 @@
   <div class="mt-5">
     <app-relation
       (deleteRelation)="deleteRelation()"
+      (updateRelation)="updateRelation()"
       (editModeChanged)="editMode = !editMode"
       (selectedIndexChanged)="selectedTransportCompanyRelationIndex = $event"
       [editMode]="editMode"
@@ -100,8 +101,10 @@
       [titleTranslationKey]="'BODI.TRANSPORT_COMPANIES.BO_RELATION_TITLE'"
     >
       <form *ngIf="editMode" class="col-12 d-flex">
+        <!-- TODO: Add condition - if update then disable dropdown -->
         <bo-select
           [formGroup]="form"
+          [disabled]="isUpdateRelationSelected"
           class="col-6 pe-3 mt-3"
           controlName="businessOrganisation"
           data-cy="businessOrganisation"
@@ -112,7 +115,6 @@
       </form>
     </app-relation>
   </div>
-
   <div class="footer fixed-bottom d-flex align-items-center justify-content-center">
     <atlas-button
       [footerEdit]="editMode"
