--- a/frontend/src/app/pages/bodi/transport-companies/detail/transport-company-detail.component.html
+++ b/frontend/src/app/pages/bodi/transport-companies/detail/transport-company-detail.component.html
@@ -134,7 +134,7 @@
     >
     </atlas-button>
     <atlas-button
-      (click)="createRelation()"
+      (click)="save()"
       [disabled]="!form.dirty"
       [footerEdit]="editMode"
       [submitButton]="true"
