ATLAS-833: fixed tests

--- a/frontend/src/app/core/components/relation/relation.component.html
+++ b/frontend/src/app/core/components/relation/relation.component.html
@@ -63,6 +63,7 @@
   <button
     (click)="deleteRelation.emit()"
     [disabled]="selectedIndex === -1"
+    id="delete"
     class="atlas-primary-btn"
     data-cy="delete-relation-btn"
   >
