--- a/frontend/src/app/core/form-components/comment/comment.component.scss
+++ b/frontend/src/app/core/form-components/comment/comment.component.scss
@@ -35,7 +35,7 @@ textarea {
 
   &.ng-invalid.ng-touched,
   &.ng-invalid.ng-dirty {
-    border-color: red;
+    //border-color: red;
     border-width: 3px;
 
     padding: 2px 3px 0 3px;
