Detail: container, content, footer components

--- a/frontend/src/app/core/components/detail-footer/detail-footer.component.html
+++ b/frontend/src/app/core/components/detail-footer/detail-footer.component.html
@@ -1,5 +1,5 @@
-<div class="page-footer">
-  <div class="page-footer-actions align-items-center justify-content-center d-flex">
+<div class="footer-box">
+  <footer class="d-flex justify-content-center align-items-center">
     <ng-content></ng-content>
-  </div>
+  </footer>
 </div>
