--- a/frontend/src/app/pages/sepodi/service-point-side-panel/loading-points/loading-points-table.component.html
+++ b/frontend/src/app/pages/sepodi/service-point-side-panel/loading-points/loading-points-table.component.html
@@ -25,8 +25,7 @@
   ></app-table>
 </div>
 
-<div class="page-footer">
-  <div class="page-footer-actions align-items-center justify-content-center d-flex">
+<atlas-detail-footer>
     <atlas-button
       buttonDataCy="close-detail"
       buttonText="SEPODI.BACK_TO_MAP"
@@ -34,5 +33,4 @@
       (buttonClicked)="closeSidePanel()"
     >
     </atlas-button>
-  </div>
-</div>
+</atlas-detail-footer>
