--- a/frontend/src/app/core/components/base-detail/base-detail.component.html
+++ b/frontend/src/app/core/components/base-detail/base-detail.component.html
@@ -1,134 +1,137 @@
 <div scrollToTop>
   <atlas-detail-page-container>
-    <div class="detail-wrapper">
-      <h1 *ngIf="!controller.showSwitch; else detailPageTitle" class="font-bold-4xl mb-5">
-        {{ headingNew | translate }}
-      </h1>
-      <ng-template #detailPageTitle>
-        <div class="font-bold-4xl detail-title mb-3">
-          {{ controller.getDetailHeading(controller.record) }}
-        </div>
-        <div class="font-bold-xl mb-2">
+    <atlas-detail-page-content>
+      <div class="detail-wrapper mt-5">
+        <h1 *ngIf="!controller.showSwitch; else detailPageTitle" class="font-bold-4xl mb-5">
+          {{ headingNew | translate }}
+        </h1>
+        <ng-template #detailPageTitle>
+          <div class="font-bold-4xl detail-title mb-3">
+            {{ controller.getDetailHeading(controller.record) }}
+          </div>
+          <div class="font-bold-xl mb-2">
           <span data-cy="detail-subheading-id">{{
-            controller.getDetailSubheading(controller.record)
-          }}</span>
-          <span data-cy="total-range">
+              controller.getDetailSubheading(controller.record)
+            }}</span>
+            <span data-cy="total-range">
             -
             <date-range-text [dateRange]="controller.maxValidity"></date-range-text>
           </span>
+          </div>
+        </ng-template>
+        <div class="col-12 d-flex mt-3">
+          <div class="d-flex flex-column col-9 pe-3">
+            <app-switch-version
+              (switchVersion)="controller.switchVersion($event)"
+              *ngIf="controller.showSwitch"
+              [currentRecord]="controller.record!"
+              [records]="controller.records!"
+              [switchDisabled]="controller.form.enabled"
+            ></app-switch-version>
+          </div>
+          <div class="d-flex flex-column col-9">
+            <app-coverage
+              [currentRecord]="controller.record!"
+              [pageType]="controller.getPageType()"
+            ></app-coverage>
+          </div>
         </div>
-      </ng-template>
-      <div class="col-12 d-flex mt-3">
-        <div class="d-flex flex-column col-9 pe-3">
-          <app-switch-version
-            (switchVersion)="controller.switchVersion($event)"
-            *ngIf="controller.showSwitch"
-            [currentRecord]="controller.record!"
-            [records]="controller.records!"
-            [switchDisabled]="controller.form.enabled"
-          ></app-switch-version>
-        </div>
-        <div class="d-flex flex-column col-9">
-          <app-coverage
-            [currentRecord]="controller.record!"
-            [pageType]="controller.getPageType()"
-          ></app-coverage>
-        </div>
-      </div>
 
-      <div *ngIf="controller.isExistingRecord()" class="form-title-section">
-        <h2 class="font-bold-2xl color-gray-900">
-          {{ formDetailHeading | translate }} - {{ 'COMMON.VERSION' | translate }}
-          {{ controller.versionNumberOfCurrentRecord }}
-        </h2>
+        <div *ngIf="controller.isExistingRecord()" class="form-title-section">
+          <h2 class="font-bold-2xl color-gray-900">
+            {{ formDetailHeading | translate }} - {{ 'COMMON.VERSION' | translate }}
+            {{ controller.versionNumberOfCurrentRecord }}
+          </h2>
+          <div>
+            <span class="font-bold-lg color-gray-900">{{ 'COMMON.STATUS' | translate }} </span>
+            <span class="color-gray-900">{{
+                'COMMON.STATUS_TYPES.' + controller.statusOfCurrentRecord | translate
+              }}</span>
+          </div>
+          <div *ngIf="workflowEnabled && controller.form.disabled">
+            <app-workflow
+              *ngIf="controller.isWorkflowable()"
+              [descriptionForWorkflow]="this.controller.getDescriptionForWorkflow()"
+              [lineRecord]="this.controller.record"
+              (workflowEvent)="receiveWorkflowEvent()"
+            ></app-workflow>
+          </div>
+        </div>
+
         <div>
-          <span class="font-bold-lg color-gray-900">{{ 'COMMON.STATUS' | translate }} </span>
-          <span class="color-gray-900">{{
-            'COMMON.STATUS_TYPES.' + controller.statusOfCurrentRecord | translate
-          }}</span>
+          <ng-content></ng-content>
         </div>
-        <div *ngIf="workflowEnabled && controller.form.disabled">
-          <app-workflow
-            *ngIf="controller.isWorkflowable()"
-            [descriptionForWorkflow]="this.controller.getDescriptionForWorkflow()"
-            [lineRecord]="this.controller.record"
-            (workflowEvent)="receiveWorkflowEvent()"
-          ></app-workflow>
+        <div class="mt-5">
+          <app-user-detail-info
+            *ngIf="controller.isExistingRecord()"
+            [record]="controller.record"
+          ></app-user-detail-info>
         </div>
       </div>
+    </atlas-detail-page-content>
 
-      <div>
-        <ng-content></ng-content>
-      </div>
-      <div class="mt-5">
-        <app-user-detail-info
-          *ngIf="controller.isExistingRecord()"
-          [record]="controller.record"
-        ></app-user-detail-info>
-      </div>
-    </div>
-  </atlas-detail-page-container>
 
-  <atlas-detail-footer>
-    <atlas-button
-      (click)="controller.backToOverview()"
-      [footerEdit]="controller.form.enabled"
-      buttonDataCy="back-to-overview"
-      buttonText="COMMON.BACK_TO_OVERVIEW"
-      buttonType="whiteFooterNonEdit"
-    >
-    </atlas-button>
-    <atlas-button
-      (buttonClicked)="controller.toggleEdit()"
-      [footerEdit]="controller.form.enabled"
-      buttonDataCy="cancel"
-      buttonText="COMMON.CANCEL"
-      buttonType="whiteFooterEdit"
-      wrapperStyleClass="me-3"
-    >
-    </atlas-button>
-    <atlas-button
-      (click)="controller.save()"
-      [disabled]="!controller.form.dirty"
-      [footerEdit]="controller.form.enabled"
-      [submitButton]="true"
-      buttonDataCy="save-item"
-      buttonText="COMMON.SAVE"
-      buttonType="whiteFooterEdit"
-    >
-    </atlas-button>
-    <ng-container *ngIf="controller.isExistingRecord()">
-      <div *ngIf="isEditButtonVisible()">
+    <atlas-detail-footer>
+      <atlas-button
+        (click)="controller.backToOverview()"
+        [footerEdit]="controller.form.enabled"
+        buttonDataCy="back-to-overview"
+        buttonText="COMMON.BACK_TO_OVERVIEW"
+        buttonType="whiteFooterNonEdit"
+      >
+      </atlas-button>
+      <atlas-button
+        (buttonClicked)="controller.toggleEdit()"
+        [footerEdit]="controller.form.enabled"
+        buttonDataCy="cancel"
+        buttonText="COMMON.CANCEL"
+        buttonType="whiteFooterEdit"
+        wrapperStyleClass="me-3"
+      >
+      </atlas-button>
+      <atlas-button
+        (click)="controller.save()"
+        [disabled]="!controller.form.dirty"
+        [footerEdit]="controller.form.enabled"
+        [submitButton]="true"
+        buttonDataCy="save-item"
+        buttonText="COMMON.SAVE"
+        buttonType="whiteFooterEdit"
+      >
+      </atlas-button>
+      <ng-container *ngIf="controller.isExistingRecord()">
+        <div *ngIf="isEditButtonVisible()">
+          <atlas-button
+            (buttonClicked)="controller.toggleEdit()"
+            [applicationType]="this.controller.getApplicationType()"
+            [businessOrganisation]="selectedRecord.businessOrganisation!"
+            [disabled]="controller.form.enabled || selectedRecord.status === 'REVOKED'"
+            buttonDataCy="edit-item"
+            buttonText="COMMON.EDIT"
+            buttonType="edit"
+            wrapperStyleClass="ms-3"
+          ></atlas-button>
+        </div>
         <atlas-button
-          (buttonClicked)="controller.toggleEdit()"
+          (buttonClicked)="controller.revoke()"
           [applicationType]="this.controller.getApplicationType()"
-          [businessOrganisation]="selectedRecord.businessOrganisation!"
-          [disabled]="controller.form.enabled || selectedRecord.status === 'REVOKED'"
-          buttonDataCy="edit-item"
-          buttonText="COMMON.EDIT"
-          buttonType="edit"
+          [disabled]="controller.form.enabled || controller.record.status === 'REVOKED'"
+          buttonDataCy="revoke-item"
+          buttonText="COMMON.REVOKE"
+          buttonType="revoke"
           wrapperStyleClass="ms-3"
-        ></atlas-button>
-      </div>
-      <atlas-button
-        (buttonClicked)="controller.revoke()"
-        [applicationType]="this.controller.getApplicationType()"
-        [disabled]="controller.form.enabled || controller.record.status === 'REVOKED'"
-        buttonDataCy="revoke-item"
-        buttonText="COMMON.REVOKE"
-        buttonType="revoke"
-        wrapperStyleClass="ms-3"
-      >
-      </atlas-button>
-      <atlas-button
-        (buttonClicked)="controller.delete()"
-        [disabled]="controller.form.enabled"
-        buttonDataCy="delete-item"
-        buttonText="COMMON.DELETE"
-        buttonType="delete"
-        wrapperStyleClass="ms-3"
-      >
-      </atlas-button>
-    </ng-container>
-  </atlas-detail-footer>
+        >
+        </atlas-button>
+        <atlas-button
+          (buttonClicked)="controller.delete()"
+          [disabled]="controller.form.enabled"
+          buttonDataCy="delete-item"
+          buttonText="COMMON.DELETE"
+          buttonType="delete"
+          wrapperStyleClass="ms-3"
+        >
+        </atlas-button>
+      </ng-container>
+    </atlas-detail-footer>
+  </atlas-detail-page-container>
 </div>
