--- a/frontend/src/app/core/components/detail-page-container/detail-page-container.component.scss
+++ b/frontend/src/app/core/components/detail-page-container/detail-page-container.component.scss
@@ -1,16 +1,7 @@
 @use 'src/styles/variables' as variables;
 
 .detail-page-container {
-  background-color: white;
-
-  padding: 56px 56px calc(#{variables.$footerHeight} + 56px) 56px;
-
-  border-radius: variables.$border-radius;
-
-  min-height: calc(100vh - #{variables.$footerHeight} - #{variables.$headerHeight});
-  width: variables.$detailPageWidth;
-}
-
-.disable-horizontal-scroll {
+  padding: 30px 30px 0 30px;
+  position: relative;
   overflow-x: clip;
 }
