--- a/frontend/src/app/pages/sepodi/service-point-side-panel/service-point-side-panel.component.html
+++ b/frontend/src/app/pages/sepodi/service-point-side-panel/service-point-side-panel.component.html
@@ -1,4 +1,4 @@
-<div class="ps-3 pt-3 pe-3 position-relative">
+<atlas-detail-page-container>
   <div class="font-bold-4xl detail-title mb-3">
     {{ selectedVersion.designationOfficial }}
   </div>
@@ -35,4 +35,4 @@
       <router-outlet></router-outlet>
     </mat-tab-nav-panel>
   </div>
-</div>
+</atlas-detail-page-container>
