--- a/frontend/src/app/pages/sepodi/traffic-point-elements/traffic-point-elements-detail.component.html
+++ b/frontend/src/app/pages/sepodi/traffic-point-elements/traffic-point-elements-detail.component.html
@@ -1,4 +1,4 @@
-<div class="p-3 position-relative">
+<atlas-detail-page-container>
   <div class="font-bold-4xl detail-title mb-3">
     {{
       isTrafficPointArea
@@ -12,7 +12,7 @@
       <date-range-text [dateRange]="maxValidity"></date-range-text>
     </span>
   </div>
-  <div class="d-flex flex-row mb-3">
+  <div class="d-flex flex-row mb-5">
     <div class="d-flex flex-column me-5" *ngIf="!isNew">
       <div class="font-bold-base">{{ 'SEPODI.SERVICE_POINTS.SLOID' | translate }}</div>
       <div>{{ selectedVersion.sloid }}</div>
@@ -24,10 +24,8 @@
       <div>{{ servicePointName }}</div>
     </div>
   </div>
-</div>
 
-<div class="p-3">
-  <div class="detail-content position-relative">
+  <atlas-detail-page-content>
     <div class="new-sloid d-flex flex-column" *ngIf="isNew">
       <atlas-sloid
         [formGroup]="form"
@@ -167,47 +165,45 @@
       <mat-divider class="mt-4 mb-4"></mat-divider>
       <app-user-detail-info [record]="selectedVersion"></app-user-detail-info>
     </div>
-  </div>
+  </atlas-detail-page-content>
 
-  <div class="page-footer">
-    <div class="page-footer-actions align-items-center justify-content-center d-flex">
-      <atlas-button
-        buttonDataCy="close-detail"
-        buttonText="COMMON.BACK"
-        buttonType="whiteFooterNonEdit"
-        (buttonClicked)="confirmCancel()"
-        [footerEdit]="form.enabled"
-      >
-      </atlas-button>
-      <atlas-button
-        *ngIf="form.disabled"
-        (buttonClicked)="toggleEdit()"
-        applicationType="SEPODI"
-        buttonDataCy="edit"
-        buttonText="COMMON.EDIT"
-        buttonType="edit-service-point-dependent"
-        [businessOrganisations]="servicePointBusinessOrganisations"
-        wrapperStyleClass="ms-3"
-      ></atlas-button>
-      <atlas-button
-        [footerEdit]="form.enabled"
-        (buttonClicked)="toggleEdit()"
-        buttonDataCy="cancel"
-        buttonText="COMMON.CANCEL"
-        buttonType="whiteFooterEdit"
-        wrapperStyleClass="ms-3"
-      ></atlas-button>
-      <atlas-button
-        (click)="save()"
-        [disabled]="!this.form.dirty"
-        [footerEdit]="form.enabled"
-        [submitButton]="true"
-        buttonDataCy="save-item"
-        buttonText="COMMON.SAVE"
-        buttonType="whiteFooterEdit"
-        wrapperStyleClass="ms-3"
-      >
-      </atlas-button>
-    </div>
-  </div>
-</div>
+  <atlas-detail-footer>
+    <atlas-button
+      buttonDataCy="close-detail"
+      buttonText="COMMON.BACK"
+      buttonType="whiteFooterNonEdit"
+      (buttonClicked)="confirmCancel()"
+      [footerEdit]="form.enabled"
+    >
+    </atlas-button>
+    <atlas-button
+      *ngIf="form.disabled"
+      (buttonClicked)="toggleEdit()"
+      applicationType="SEPODI"
+      buttonDataCy="edit"
+      buttonText="COMMON.EDIT"
+      buttonType="edit-service-point-dependent"
+      [businessOrganisations]="servicePointBusinessOrganisations"
+      wrapperStyleClass="ms-3"
+    ></atlas-button>
+    <atlas-button
+      [footerEdit]="form.enabled"
+      (buttonClicked)="toggleEdit()"
+      buttonDataCy="cancel"
+      buttonText="COMMON.CANCEL"
+      buttonType="whiteFooterEdit"
+      wrapperStyleClass="ms-3"
+    ></atlas-button>
+    <atlas-button
+      (click)="save()"
+      [disabled]="!this.form.dirty"
+      [footerEdit]="form.enabled"
+      [submitButton]="true"
+      buttonDataCy="save-item"
+      buttonText="COMMON.SAVE"
+      buttonType="whiteFooterEdit"
+      wrapperStyleClass="ms-3"
+    >
+    </atlas-button>
+  </atlas-detail-footer>
+</atlas-detail-page-container>
