--- a/frontend/src/app/pages/user-administration/client-credential/detail/create/user-administration-client-create.component.html
+++ b/frontend/src/app/pages/user-administration/client-credential/detail/create/user-administration-client-create.component.html
@@ -1,55 +1,57 @@
 <div scrollToTop>
   <atlas-detail-page-container>
-    <h1 class="font-bold-4xl mb-5">{{ 'USER_ADMIN.CLIENT_CREDENTIAL.NEW' | translate }}</h1>
-    <h2 class="font-bold-xl mb-2">
-      {{ 'USER_ADMIN.CLIENT_CREDENTIAL.NEW_INFORMATION' | translate }}
-    </h2>
+    <atlas-detail-page-content>
+      <h1 class="font-bold-4xl mb-5">{{ 'USER_ADMIN.CLIENT_CREDENTIAL.NEW' | translate }}</h1>
+      <h2 class="font-bold-xl mb-2">
+        {{ 'USER_ADMIN.CLIENT_CREDENTIAL.NEW_INFORMATION' | translate }}
+      </h2>
 
-    <div class="col-12 d-flex">
-      <div class="d-flex flex-column col-6 pe-3">
-        <atlas-text-field
-          [formGroup]="form"
-          controlName="clientCredentialId"
-          fieldLabel="USER_ADMIN.CLIENT_CREDENTIAL.CLIENT_ID"
-        >
-        </atlas-text-field>
+      <div class="col-12 d-flex">
+        <div class="d-flex flex-column col-6 pe-3">
+          <atlas-text-field
+            [formGroup]="form"
+            controlName="clientCredentialId"
+            fieldLabel="USER_ADMIN.CLIENT_CREDENTIAL.CLIENT_ID"
+          >
+          </atlas-text-field>
+        </div>
+        <div class="d-flex flex-column col-6 pe-3">
+          <atlas-text-field
+            [formGroup]="form"
+            controlName="alias"
+            fieldLabel="USER_ADMIN.CLIENT_CREDENTIAL.ALIAS"
+            infoIconTitle="USER_ADMIN.CLIENT_CREDENTIAL.ALIAS_INFO"
+          >
+          </atlas-text-field>
+        </div>
       </div>
-      <div class="d-flex flex-column col-6 pe-3">
-        <atlas-text-field
-          [formGroup]="form"
-          controlName="alias"
-          fieldLabel="USER_ADMIN.CLIENT_CREDENTIAL.ALIAS"
-          infoIconTitle="USER_ADMIN.CLIENT_CREDENTIAL.ALIAS_INFO"
-        >
-        </atlas-text-field>
+      <div class="col-12 d-flex">
+        <div class="d-flex flex-column col-12 pe-3">
+          <atlas-text-field
+            [formGroup]="form"
+            controlName="comment"
+            fieldLabel="USER_ADMIN.CLIENT_CREDENTIAL.COMMENT"
+          >
+          </atlas-text-field>
+        </div>
       </div>
-    </div>
-    <div class="col-12 d-flex">
-      <div class="d-flex flex-column col-12 pe-3">
-        <atlas-text-field
-          [formGroup]="form"
-          controlName="comment"
-          fieldLabel="USER_ADMIN.CLIENT_CREDENTIAL.COMMENT"
-        >
-        </atlas-text-field>
-      </div>
-    </div>
 
-    <h1 class="font-bold-4xl mt-5">{{ 'USER_ADMIN.APPLICATIONS' | translate }}</h1>
-    <div *ngFor="let permission of userPermissionManager.userPermission.permissions">
-      <app-user-administration-application-config
-        [application]="permission.application"
-        [role]="permission.role"
-      ></app-user-administration-application-config>
-    </div>
+      <h1 class="font-bold-4xl mt-5">{{ 'USER_ADMIN.APPLICATIONS' | translate }}</h1>
+      <div *ngFor="let permission of userPermissionManager.userPermission.permissions">
+        <app-user-administration-application-config
+          [application]="permission.application"
+          [role]="permission.role"
+        ></app-user-administration-application-config>
+      </div>
+    </atlas-detail-page-content>
+
+    <atlas-detail-footer>
+      <button (click)="cancelCreation()" class="atlas-primary-btn" data-cy="cancel">
+        {{ 'COMMON.CANCEL' | translate }}
+      </button>
+      <button (click)="create()" class="atlas-primary-btn ms-3" data-cy="save" type="submit">
+        {{ 'COMMON.SAVE' | translate }}
+      </button>
+    </atlas-detail-footer>
   </atlas-detail-page-container>
-
-  <atlas-detail-footer>
-    <button (click)="cancelCreation()" class="atlas-primary-btn" data-cy="cancel">
-      {{ 'COMMON.CANCEL' | translate }}
-    </button>
-    <button (click)="create()" class="atlas-primary-btn ms-3" data-cy="save" type="submit">
-      {{ 'COMMON.SAVE' | translate }}
-    </button>
-  </atlas-detail-footer>
 </div>
