--- a/frontend/src/app/pages/user-administration/user/detail/create/user-administration-user-create.component.html
+++ b/frontend/src/app/pages/user-administration/user/detail/create/user-administration-user-create.component.html
@@ -1,57 +1,60 @@
 <div scrollToTop>
   <atlas-detail-page-container>
-    <h1 class="font-bold-4xl mb-5">{{ 'USER_ADMIN.NEW' | translate }}</h1>
-    <h2 class="font-bold-xl mb-2">{{ 'USER_ADMIN.NEW_INFORMATION' | translate }}</h2>
+    <atlas-detail-page-content>
+      <h1 class="font-bold-4xl mb-5">{{ 'USER_ADMIN.NEW' | translate }}</h1>
+      <h2 class="font-bold-xl mb-2">{{ 'USER_ADMIN.NEW_INFORMATION' | translate }}</h2>
 
-    <div class="d-flex flex-column mb-2">
-      <mat-label class="font-bold-lg required-indicator">{{
-        'USER_ADMIN.TABLE_HEADER' | translate
-      }}</mat-label>
-      <mat-label class="font-regular-sm">{{ 'FORM.FOR_EXAMPLE' | translate }} u123456</mat-label>
-    </div>
-    <div class="pe-1 pb-1">
-      <app-user-select
-        (selectionChange)="selectUser($event)"
-        [form]="userSearchForm"
-      ></app-user-select>
-    </div>
-    <p *ngIf="userHasAlreadyPermissions" class="color-error">
-      {{ 'USER_ADMIN.SELECTED_USER_HAS_ALREADY_PERMISSIONS' | translate }}
-    </p>
-    <p *ngIf="selectedUserHasNoUserId" class="color-error">
-      {{ 'USER_ADMIN.SELECTED_USER_HAS_NO_USER_ID' | translate }}
-    </p>
-
-    <ng-template [ngIf]="userLoaded && !userHasAlreadyPermissions">
-      <app-user-administration-read-only-data
-        [data]="userLoaded"
-      ></app-user-administration-read-only-data>
-      <h1 class="font-bold-4xl mt-5">{{ 'USER_ADMIN.APPLICATIONS' | translate }}</h1>
-      <div *ngFor="let permission of userPermissionManager.userPermission.permissions">
-        <app-user-administration-application-config
-          [application]="permission.application"
-          [role]="permission.role"
-        ></app-user-administration-application-config>
+      <div class="d-flex flex-column mb-2">
+        <mat-label class="font-bold-lg required-indicator">{{
+            'USER_ADMIN.TABLE_HEADER' | translate
+          }}
+        </mat-label>
+        <mat-label class="font-regular-sm">{{ 'FORM.FOR_EXAMPLE' | translate }} u123456</mat-label>
       </div>
-    </ng-template>
-  </atlas-detail-page-container>
+      <div class="pe-1 pb-1">
+        <app-user-select
+          (selectionChange)="selectUser($event)"
+          [form]="userSearchForm"
+        ></app-user-select>
+      </div>
+      <p *ngIf="userHasAlreadyPermissions" class="color-error">
+        {{ 'USER_ADMIN.SELECTED_USER_HAS_ALREADY_PERMISSIONS' | translate }}
+      </p>
+      <p *ngIf="selectedUserHasNoUserId" class="color-error">
+        {{ 'USER_ADMIN.SELECTED_USER_HAS_NO_USER_ID' | translate }}
+      </p>
 
-  <atlas-detail-footer>
-    <button
-      (click)="cancelCreation((userLoaded ?? false) && !userHasAlreadyPermissions)"
-      class="atlas-primary-btn"
-      data-cy="cancel"
-    >
-      {{ 'COMMON.CANCEL' | translate }}
-    </button>
-    <button
-      (click)="createUser()"
-      [disabled]="!userLoaded || userHasAlreadyPermissions || !saveEnabled"
-      class="atlas-primary-btn ms-3"
-      data-cy="save"
-      type="submit"
-    >
-      {{ 'COMMON.SAVE' | translate }}
-    </button>
-  </atlas-detail-footer>
+      <ng-template [ngIf]="userLoaded && !userHasAlreadyPermissions">
+        <app-user-administration-read-only-data
+          [data]="userLoaded"
+        ></app-user-administration-read-only-data>
+        <h1 class="font-bold-4xl mt-5">{{ 'USER_ADMIN.APPLICATIONS' | translate }}</h1>
+        <div *ngFor="let permission of userPermissionManager.userPermission.permissions">
+          <app-user-administration-application-config
+            [application]="permission.application"
+            [role]="permission.role"
+          ></app-user-administration-application-config>
+        </div>
+      </ng-template>
+    </atlas-detail-page-content>
+
+    <atlas-detail-footer>
+      <button
+        (click)="cancelCreation((userLoaded ?? false) && !userHasAlreadyPermissions)"
+        class="atlas-primary-btn"
+        data-cy="cancel"
+      >
+        {{ 'COMMON.CANCEL' | translate }}
+      </button>
+      <button
+        (click)="createUser()"
+        [disabled]="!userLoaded || userHasAlreadyPermissions || !saveEnabled"
+        class="atlas-primary-btn ms-3"
+        data-cy="save"
+        type="submit"
+      >
+        {{ 'COMMON.SAVE' | translate }}
+      </button>
+    </atlas-detail-footer>
+  </atlas-detail-page-container>
 </div>
