--- a/frontend/src/app/pages/bodi/companies/detail/company-detail.component.html
+++ b/frontend/src/app/pages/bodi/companies/detail/company-detail.component.html
@@ -1,84 +1,86 @@
 <div scrollToTop>
   <atlas-detail-page-container>
-    <div class="detail-wrapper">
-      <h1 class="font-bold-4xl mb-5">
-        {{ (company.uicCode ?? '') + ' - ' + (company.name ?? '') }}
-      </h1>
+    <atlas-detail-page-content>
+      <div class="detail-wrapper">
+        <h1 class="font-bold-4xl mb-5 mt-5">
+          {{ (company.uicCode ?? '') + ' - ' + (company.name ?? '') }}
+        </h1>
 
-      <h2 class="font-bold-2xl color-gray-900">
-        {{ 'BODI.COMPANIES.BASIC_DATA' | translate }}
-      </h2>
+        <h2 class="font-bold-2xl color-gray-900">
+          {{ 'BODI.COMPANIES.BASIC_DATA' | translate }}
+        </h2>
 
-      <form [formGroup]="form">
-        <div class="col-12 d-flex">
-          <div class="d-flex flex-column col-6 pe-3">
-            <atlas-text-field
-              [formGroup]="form"
-              controlName="uicCode"
-              data-cy="uicCode"
-              fieldLabel="BODI.COMPANIES.UIC_CODE"
-            ></atlas-text-field>
+        <form [formGroup]="form">
+          <div class="col-12 d-flex">
+            <div class="d-flex flex-column col-6 pe-3">
+              <atlas-text-field
+                [formGroup]="form"
+                controlName="uicCode"
+                data-cy="uicCode"
+                fieldLabel="BODI.COMPANIES.UIC_CODE"
+              ></atlas-text-field>
+            </div>
+
+            <div class="d-flex flex-column col-6 pe-3">
+              <atlas-text-field
+                [formGroup]="form"
+                controlName="countryCodeIso"
+                data-cy="countryCodeIso"
+                fieldLabel="BODI.COMPANIES.COUNTRY_CODE"
+              ></atlas-text-field>
+            </div>
           </div>
 
-          <div class="d-flex flex-column col-6 pe-3">
-            <atlas-text-field
-              [formGroup]="form"
-              controlName="countryCodeIso"
-              data-cy="countryCodeIso"
-              fieldLabel="BODI.COMPANIES.COUNTRY_CODE"
-            ></atlas-text-field>
+          <div class="col-12 d-flex">
+            <div class="d-flex flex-column col-12 pe-3">
+              <atlas-text-field
+                [formGroup]="form"
+                controlName="shortName"
+                data-cy="shortName"
+                fieldLabel="BODI.COMPANIES.SHORT_NAME"
+              ></atlas-text-field>
+            </div>
           </div>
-        </div>
 
-        <div class="col-12 d-flex">
-          <div class="d-flex flex-column col-12 pe-3">
-            <atlas-text-field
-              [formGroup]="form"
-              controlName="shortName"
-              data-cy="shortName"
-              fieldLabel="BODI.COMPANIES.SHORT_NAME"
-            ></atlas-text-field>
+          <div class="col-12 d-flex">
+            <div class="d-flex flex-column col-12 pe-3">
+              <atlas-text-field
+                [formGroup]="form"
+                controlName="name"
+                data-cy="name"
+                fieldLabel="BODI.COMPANIES.NAME"
+              ></atlas-text-field>
+            </div>
           </div>
-        </div>
 
-        <div class="col-12 d-flex">
-          <div class="d-flex flex-column col-12 pe-3">
-            <atlas-text-field
-              [formGroup]="form"
-              controlName="name"
-              data-cy="name"
-              fieldLabel="BODI.COMPANIES.NAME"
-            ></atlas-text-field>
+          <div class="col-12 d-flex">
+            <div class="d-flex flex-column col-12 pe-3">
+              <atlas-text-field
+                [formGroup]="form"
+                controlName="url"
+                data-cy="url"
+                fieldLabel="BODI.COMPANIES.URL"
+              >
+                <ng-template #customChildInputPostfixTemplate>
+                  <a [attr.href]="prependHttp(form.value.url)" target="_blank" rel="noopener">
+                    <link-icon></link-icon>
+                  </a>
+                </ng-template>
+              </atlas-text-field>
+            </div>
           </div>
-        </div>
+        </form>
+      </div>
+    </atlas-detail-page-content>
 
-        <div class="col-12 d-flex">
-          <div class="d-flex flex-column col-12 pe-3">
-            <atlas-text-field
-              [formGroup]="form"
-              controlName="url"
-              data-cy="url"
-              fieldLabel="BODI.COMPANIES.URL"
-            >
-              <ng-template #customChildInputPostfixTemplate>
-                <a [attr.href]="prependHttp(form.value.url)" target="_blank" rel="noopener">
-                  <link-icon></link-icon>
-                </a>
-              </ng-template>
-            </atlas-text-field>
-          </div>
-        </div>
-      </form>
-    </div>
+    <atlas-detail-footer>
+      <atlas-button
+        backButton
+        buttonDataCy="back-to-overview"
+        buttonText="COMMON.BACK_TO_OVERVIEW"
+        buttonType="whiteFooterNonEdit"
+      >
+      </atlas-button>
+    </atlas-detail-footer>
   </atlas-detail-page-container>
-
-  <atlas-detail-footer>
-    <atlas-button
-      backButton
-      buttonDataCy="back-to-overview"
-      buttonText="COMMON.BACK_TO_OVERVIEW"
-      buttonType="whiteFooterNonEdit"
-    >
-    </atlas-button>
-  </atlas-detail-footer>
 </div>
