--- a/frontend/src/app/pages/bodi/transport-companies/detail/transport-company-detail.component.html
+++ b/frontend/src/app/pages/bodi/transport-companies/detail/transport-company-detail.component.html
@@ -1,153 +1,155 @@
 <div scrollToTop>
   <atlas-detail-page-container>
-    <div class="detail-wrapper">
-      <h1 class="font-bold-4xl mb-5">
-        {{
-          (transportCompany.abbreviation ?? '') +
+    <atlas-detail-page-content>
+      <div class="detail-wrapper">
+        <h1 class="font-bold-4xl mb-5 mt-5">
+          {{
+            (transportCompany.abbreviation ?? '') +
             ' - ' +
             (transportCompany.businessRegisterName ?? '')
-        }}
-      </h1>
+          }}
+        </h1>
 
-      <h2 class="font-bold-2xl color-gray-900">
-        {{ 'BODI.TRANSPORT_COMPANIES.BASIC_DATA' | translate }}
-      </h2>
+        <h2 class="font-bold-2xl color-gray-900">
+          {{ 'BODI.TRANSPORT_COMPANIES.BASIC_DATA' | translate }}
+        </h2>
 
-      <div class="mb-5">
-        <span class="font-bold-lg color-gray-900">{{ 'COMMON.STATUS' | translate }} </span>
-        <span class="color-gray-900">{{
-          'BODI.TRANSPORT_COMPANIES.TRANSPORT_COMPANY_STATUS.' +
-            transportCompany.transportCompanyStatus | translate
-        }}</span>
-      </div>
-      <form [formGroup]="transportFormGroup">
-        <div class="col-12 d-flex">
-          <div class="d-flex flex-column col-6 pe-3">
-            <atlas-text-field
-              [formGroup]="transportFormGroup"
-              controlName="number"
-              fieldLabel="BODI.TRANSPORT_COMPANIES.NUMBER"
-            ></atlas-text-field>
-          </div>
-
-          <div class="d-flex flex-column col-6 pe-3">
-            <atlas-text-field
-              [formGroup]="transportFormGroup"
-              controlName="abbreviation"
-              fieldLabel="BODI.TRANSPORT_COMPANIES.ABBREVIATION"
-            ></atlas-text-field>
-          </div>
+        <div class="mb-5">
+          <span class="font-bold-lg color-gray-900">{{ 'COMMON.STATUS' | translate }} </span>
+          <span class="color-gray-900">{{
+              'BODI.TRANSPORT_COMPANIES.TRANSPORT_COMPANY_STATUS.' +
+              transportCompany.transportCompanyStatus | translate
+            }}</span>
         </div>
+        <form [formGroup]="transportFormGroup">
+          <div class="col-12 d-flex">
+            <div class="d-flex flex-column col-6 pe-3">
+              <atlas-text-field
+                [formGroup]="transportFormGroup"
+                controlName="number"
+                fieldLabel="BODI.TRANSPORT_COMPANIES.NUMBER"
+              ></atlas-text-field>
+            </div>
 
-        <div class="col-12 d-flex">
-          <div class="d-flex flex-column col-6 pe-3">
-            <atlas-text-field
-              [formGroup]="transportFormGroup"
-              controlName="description"
-              fieldLabel="BODI.TRANSPORT_COMPANIES.DESCRIPTION"
-            ></atlas-text-field>
+            <div class="d-flex flex-column col-6 pe-3">
+              <atlas-text-field
+                [formGroup]="transportFormGroup"
+                controlName="abbreviation"
+                fieldLabel="BODI.TRANSPORT_COMPANIES.ABBREVIATION"
+              ></atlas-text-field>
+            </div>
           </div>
-          <div class="d-flex flex-column col-6 pe-3">
-            <atlas-text-field
-              [formGroup]="transportFormGroup"
-              controlName="enterpriseId"
-              fieldLabel="BODI.TRANSPORT_COMPANIES.ENTERPRISE_ID"
-            ></atlas-text-field>
-          </div>
-        </div>
 
-        <span class="font-bold-2xl">{{
-          'BODI.TRANSPORT_COMPANIES.OFFICIAL_DATA' | translate
-        }}</span>
+          <div class="col-12 d-flex">
+            <div class="d-flex flex-column col-6 pe-3">
+              <atlas-text-field
+                [formGroup]="transportFormGroup"
+                controlName="description"
+                fieldLabel="BODI.TRANSPORT_COMPANIES.DESCRIPTION"
+              ></atlas-text-field>
+            </div>
+            <div class="d-flex flex-column col-6 pe-3">
+              <atlas-text-field
+                [formGroup]="transportFormGroup"
+                controlName="enterpriseId"
+                fieldLabel="BODI.TRANSPORT_COMPANIES.ENTERPRISE_ID"
+              ></atlas-text-field>
+            </div>
+          </div>
+
+          <span class="font-bold-2xl">{{
+              'BODI.TRANSPORT_COMPANIES.OFFICIAL_DATA' | translate
+            }}</span>
+          <div class="col-12 d-flex mt-3">
+            <div class="d-flex flex-column col pe-3">
+              <atlas-text-field
+                [formGroup]="transportFormGroup"
+                controlName="businessRegisterName"
+                fieldLabel="BODI.TRANSPORT_COMPANIES.BUSINESS_REGISTER_NAME"
+              ></atlas-text-field>
+            </div>
+          </div>
+
+          <div class="col-12 d-flex mt-3">
+            <div class="d-flex flex-column col pe-3">
+              <atlas-text-field
+                [formGroup]="transportFormGroup"
+                controlName="businessRegisterNumber"
+                fieldLabel="BODI.TRANSPORT_COMPANIES.BUSINESS_REGISTER_NUMBER"
+              ></atlas-text-field>
+            </div>
+          </div>
+        </form>
+
+        <span class="font-bold-2xl">{{ 'FORM.SUPPLEMENTARY_INFORMATION' | translate }}</span>
         <div class="col-12 d-flex mt-3">
-          <div class="d-flex flex-column col pe-3">
-            <atlas-text-field
+          <div class="d-flex flex-column col-6">
+            <form-comment
+              [displayLabel]="false"
               [formGroup]="transportFormGroup"
-              controlName="businessRegisterName"
-              fieldLabel="BODI.TRANSPORT_COMPANIES.BUSINESS_REGISTER_NAME"
-            ></atlas-text-field>
+              [required]="false"
+            ></form-comment>
           </div>
         </div>
 
-        <div class="col-12 d-flex mt-3">
-          <div class="d-flex flex-column col pe-3">
-            <atlas-text-field
-              [formGroup]="transportFormGroup"
-              controlName="businessRegisterNumber"
-              fieldLabel="BODI.TRANSPORT_COMPANIES.BUSINESS_REGISTER_NUMBER"
-            ></atlas-text-field>
-          </div>
-        </div>
-      </form>
-
-      <span class="font-bold-2xl">{{ 'FORM.SUPPLEMENTARY_INFORMATION' | translate }}</span>
-      <div class="col-12 d-flex mt-3">
-        <div class="d-flex flex-column col-6">
-          <form-comment
-            [displayLabel]="false"
-            [formGroup]="transportFormGroup"
-            [required]="false"
-          ></form-comment>
+        <div class="mt-5">
+          <app-relation
+            (deleteRelation)="deleteRelation()"
+            (updateRelation)="updateRelation()"
+            (editModeChanged)="editMode = !editMode"
+            (selectedIndexChanged)="selectedTransportCompanyRelationIndex = $event"
+            [editMode]="editMode"
+            [editable]="isAdmin()"
+            [records]="transportCompanyRelations"
+            [selectedIndex]="selectedTransportCompanyRelationIndex"
+            [tableColumns]="transportCompanyRelationTableColumns"
+            [titleTranslationKey]="'BODI.TRANSPORT_COMPANIES.BO_RELATION_TITLE'"
+          >
+            <form *ngIf="editMode" class="col-12 d-flex">
+              <bo-select
+                [formGroup]="form"
+                [disabled]="isUpdateRelationSelected"
+                class="col-6 pe-3 mt-3"
+                controlName="businessOrganisation"
+                data-cy="businessOrganisation"
+                valueExtraction=""
+              >
+              </bo-select>
+              <form-date-range [formGroup]="form" class="col-6"></form-date-range>
+            </form>
+          </app-relation>
         </div>
       </div>
+    </atlas-detail-page-content>
 
-      <div class="mt-5">
-        <app-relation
-          (deleteRelation)="deleteRelation()"
-          (updateRelation)="updateRelation()"
-          (editModeChanged)="editMode = !editMode"
-          (selectedIndexChanged)="selectedTransportCompanyRelationIndex = $event"
-          [editMode]="editMode"
-          [editable]="isAdmin()"
-          [records]="transportCompanyRelations"
-          [selectedIndex]="selectedTransportCompanyRelationIndex"
-          [tableColumns]="transportCompanyRelationTableColumns"
-          [titleTranslationKey]="'BODI.TRANSPORT_COMPANIES.BO_RELATION_TITLE'"
-        >
-          <form *ngIf="editMode" class="col-12 d-flex">
-            <bo-select
-              [formGroup]="form"
-              [disabled]="isUpdateRelationSelected"
-              class="col-6 pe-3 mt-3"
-              controlName="businessOrganisation"
-              data-cy="businessOrganisation"
-              valueExtraction=""
-            >
-            </bo-select>
-            <form-date-range [formGroup]="form" class="col-6"></form-date-range>
-          </form>
-        </app-relation>
-      </div>
-    </div>
+    <atlas-detail-footer>
+      <atlas-button
+        [footerEdit]="editMode"
+        backButton
+        buttonDataCy="back-to-overview"
+        buttonText="COMMON.BACK_TO_OVERVIEW"
+        buttonType="whiteFooterNonEdit"
+      >
+      </atlas-button>
+      <atlas-button
+        (buttonClicked)="leaveEditMode()"
+        [footerEdit]="editMode"
+        buttonDataCy="cancel"
+        buttonText="COMMON.CANCEL"
+        buttonType="whiteFooterEdit"
+        wrapperStyleClass="me-3"
+      >
+      </atlas-button>
+      <atlas-button
+        (click)="save()"
+        [disabled]="!form.dirty"
+        [footerEdit]="editMode"
+        [submitButton]="true"
+        buttonDataCy="save-item"
+        buttonText="COMMON.SAVE"
+        buttonType="whiteFooterEdit"
+      >
+      </atlas-button>
+    </atlas-detail-footer>
   </atlas-detail-page-container>
-
-  <atlas-detail-footer>
-    <atlas-button
-      [footerEdit]="editMode"
-      backButton
-      buttonDataCy="back-to-overview"
-      buttonText="COMMON.BACK_TO_OVERVIEW"
-      buttonType="whiteFooterNonEdit"
-    >
-    </atlas-button>
-    <atlas-button
-      (buttonClicked)="leaveEditMode()"
-      [footerEdit]="editMode"
-      buttonDataCy="cancel"
-      buttonText="COMMON.CANCEL"
-      buttonType="whiteFooterEdit"
-      wrapperStyleClass="me-3"
-    >
-    </atlas-button>
-    <atlas-button
-      (click)="save()"
-      [disabled]="!form.dirty"
-      [footerEdit]="editMode"
-      [submitButton]="true"
-      buttonDataCy="save-item"
-      buttonText="COMMON.SAVE"
-      buttonType="whiteFooterEdit"
-    >
-    </atlas-button>
-  </atlas-detail-footer>
 </div>
