Fix button styling in prm tabs

--- a/frontend/src/app/pages/prm/tabs/contact-point/contact-point-table.component.html
+++ b/frontend/src/app/pages/prm/tabs/contact-point/contact-point-table.component.html
@@ -20,16 +20,14 @@
       (tableInitialized)="getOverview($event)"
     ></app-table>
   </div>
-  <div class="footer-box">
-    <footer class="d-flex align-items-center justify-content-center">
-      <atlas-button
-        buttonDataCy="close-detail"
-        buttonText="SEPODI.BACK_TO_MAP"
-        buttonType="whiteFooterNonEdit"
-        (buttonClicked)="closeSidePanel()"
-        [footerEdit]="false"
-      >
-      </atlas-button>
-    </footer>
-  </div>
+  <atlas-detail-footer>
+    <atlas-button
+      buttonDataCy="close-detail"
+      buttonText="SEPODI.BACK_TO_MAP"
+      buttonType="whiteFooterNonEdit"
+      (buttonClicked)="closeSidePanel()"
+      [footerEdit]="false"
+    >
+    </atlas-button>
+  </atlas-detail-footer>
 </ng-container>
