--- a/frontend/src/app/pages/prm/tabs/platform/platform-table.component.html
+++ b/frontend/src/app/pages/prm/tabs/platform/platform-table.component.html
@@ -11,8 +11,7 @@
     (tableInitialized)="getOverview($event)"
   ></app-table>
 </div>
-<div class="footer-box">
-  <footer class="d-flex align-items-center justify-content-center">
+<atlas-detail-footer>
     <atlas-button
       buttonDataCy="close-detail"
       buttonText="SEPODI.BACK_TO_MAP"
@@ -21,5 +20,4 @@
       [footerEdit]="false"
     >
     </atlas-button>
-  </footer>
-</div>
+</atlas-detail-footer>
