--- a/frontend/src/app/pages/prm/tabs/parking-lot/parking-lot-table.component.html
+++ b/frontend/src/app/pages/prm/tabs/parking-lot/parking-lot-table.component.html
@@ -20,8 +20,7 @@
       (tableInitialized)="getOverview($event)"
     ></app-table>
   </div>
-  <div class="footer-box">
-    <footer class="d-flex align-items-center justify-content-center">
+  <atlas-detail-footer>
       <atlas-button
         buttonDataCy="close-detail"
         buttonText="SEPODI.BACK_TO_MAP"
@@ -30,6 +29,5 @@
         [footerEdit]="false"
       >
       </atlas-button>
-    </footer>
-  </div>
+  </atlas-detail-footer>
 </ng-container>
