ATLAS-1356: add toilet overview

--- a/frontend/src/app/pages/prm/tabs/toilet/toilet.component.html
+++ b/frontend/src/app/pages/prm/tabs/toilet/toilet.component.html
@@ -1,8 +1,26 @@
-<div class="tab-detail-container">
-  <p>toilette works!</p>
-</div>
-<div class="footer-box">
-  <footer class="d-flex align-items-center justify-content-center">
+<ng-container *ngIf="isStopPointExisting">
+  <div class="tab-detail-container">
+    <atlas-button
+      (buttonClicked)="new()"
+      applicationType="PRM"
+      buttonDataCy="new-toilet"
+      buttonText="PRM.TOILETS.BUTTON_NEW"
+      buttonType="createCheckingPermission"
+      wrapperStyleClass="mb-5"
+    ></atlas-button>
+    <app-table
+      data-cy="toilet-overview-table"
+      [tableData]="toilets"
+      [totalCount]="totalCount"
+      [tableColumns]="tableColumns"
+      [canEdit]="true"
+      [tableFilterConfig]="tableFilterConfig"
+      (editElementEvent)="rowClicked($event)"
+      (tableChanged)="getOverview($event)"
+      (tableInitialized)="getOverview($event)"
+    ></app-table>
+  </div>
+  <atlas-detail-footer>
     <atlas-button
       buttonDataCy="close-detail"
       buttonText="SEPODI.BACK_TO_MAP"
@@ -11,5 +29,5 @@
       [footerEdit]="false"
     >
     </atlas-button>
-  </footer>
-</div>
+  </atlas-detail-footer>
+</ng-container>
