ATLAS-1356: changes after review

--- a/frontend/src/app/pages/prm/tabs/toilet/detail/toilet-detail.component.html
+++ b/frontend/src/app/pages/prm/tabs/toilet/detail/toilet-detail.component.html
@@ -39,7 +39,7 @@
     </div>
 
     <h2 class="font-bold-2xl color-gray-900" *ngIf="!isNew">
-      {{ 'PRM.PARKING_LOTS.DETAIL_INFORMATION' | translate }} -
+      {{ 'PRM.TOILETS.DETAIL_INFORMATION' | translate }} -
       {{ 'COMMON.VERSION' | translate }}
       {{ selectedVersionIndex + 1 }}
     </h2>
