ATLAS-1785: Fix sloid component: ref

--- a/frontend/src/app/core/form-components/sloid/sloid.component.html
+++ b/frontend/src/app/core/form-components/sloid/sloid.component.html
@@ -23,7 +23,7 @@
         controlName="sloid"
       >
         <ng-template #customChildInputPrefixTemplate>
-          <div class="pe-1">{{ fixedSloidPart }}</div>
+          <div class="pe-1">{{ givenPrefix }}</div>
         </ng-template>
       </atlas-text-field>
     </ng-container>
